# -respeaker-firmware-samples

./: .gitignore  AGENT_MEMORY.md  README.md
bt/bt_battery_server/src/: main.c  my_lbs.c  my_lbs.h  peripheral_lbs.code-workspace
dfu/usb_dfu/: CMakeLists.txt  app.overlay  prj.conf
dfu/usb_dfu/src/: main.c
dfu/usb_dfu/sysbuild/: mcuboot.conf  mcuboot.overlay
dfu/usb_msc/: CMakeLists.txt  README.md  app.overlay  prj.conf  sysbuild.conf
dfu/usb_msc/src/: main.c
docs/: copilot_agent_setup.md  nrf_sdk_system_sleep_api.md  nrf_sdk_system_sleep_api_analysis.md  nrf_wifi_ap_softap_notes.md  omi_firmware_low_power_analysis.md  requirements_interpretation.md  wifi_fund_l2_e3_ble_wifi_provisioning_analysis.md  wifi_fundamentals_lesson1_notes.md
driver/app/: CMakeLists.txt  Kconfig  RTC_DEMO_README.md  prj.conf  prj_simple.conf  qr_32x32.h  rtc_demo.c  simple_ui.c
driver/app/boards/: nrf5340dk_nrf5340_cpuapp.overlay
driver/app/src/: button.c  button.h  main.c
driver/app/tools/: gen_qr_32x32_header.py  qr_png_to_header.py
driver/custom_driver_module/drivers/: CMakeLists.txt  Kconfig
driver/custom_driver_module/dts/: custom_sd_spi_sdmmc.overlay
driver/custom_driver_module/examples/: sd_card_example.c
driver/tools/: extract_prd_docx.py
pm/: CMakeLists.txt  README.md  prj.conf
pm/src/: main.c
wifi/Wi-Fi_speed_test_54LM20_7002EB2/: prj.conf  sample.yaml
wifi/Wi-Fi_speed_test_54LM20_7002EB2/boards/: nrf54lm20dk_nrf54lm20a_cpuapp_ns.conf
wifi/wifi_softAP/: CMakeLists.txt  Kconfig  README.md  prj.conf  sysbuild.conf
wifi/wifi_softAP/src/: main.c
(+19 files in other folders)
